; ModuleID = '/home/carl/AnghaBench/stb/tests/vorbseek/extr_vorbseek.c_main.c'
source_filename = "/home/carl/AnghaBench/stb/tests/vorbseek/extr_vorbseek.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"Usage: vorbseek {vorbisfile} [{vorbisfile]*]\0A\00", align 1
@.str.1 = private unnamed_addr constant [63 x i8] c"Tests various seek offsets to make sure they're sample exact.\0A\00", align 1
@test_count = common dso_local global i32* null, align 8
@test_spacing = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i16*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %16 = load i32, i32* %4, align 4
  %17 = icmp eq i32 %16, 1
  br i1 %17, label %18, label %23

18:                                               ; preds = %2
  %19 = load i32, i32* @stderr, align 4
  %20 = call i32 (i32, i8*, ...) @fprintf(i32 %19, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* @stderr, align 4
  %22 = call i32 (i32, i8*, ...) @fprintf(i32 %21, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %40

23:                                               ; preds = %2
  store i32 1, i32* %9, align 4
  br label %24

24:                                               ; preds = %35, %23
  %25 = load i32, i32* %9, align 4
  %26 = load i32, i32* %4, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %38

28:                                               ; preds = %24
  store i32 0, i32* %13, align 4
  store i32 0, i32* %14, align 4
  %29 = load i8**, i8*** %5, align 8
  %30 = load i32, i32* %9, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i8*, i8** %29, i64 %31
  %33 = load i8*, i8** %32, align 8
  %34 = call i32 @stb_vorbis_decode_filename(i8* %33, i32* %6, i32* %7, i16** %12)
  store i32 %34, i32* %15, align 4
  br label %38

35:                                               ; No predecessors!
  %36 = load i32, i32* %9, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %9, align 4
  br label %24

38:                                               ; preds = %28, %24
  store i32 0, i32* %3, align 4
  br label %40

39:                                               ; No predecessors!
  store i32 1, i32* %3, align 4
  br label %40

40:                                               ; preds = %39, %38, %18
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @stb_vorbis_decode_filename(i8*, i32*, i32*, i16**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
